# ch2rss

./: .flake8  .gitignore  .rsync-filter  Makefile  README.md  ansible.cfg  ch2rss.py  deploy.yml  dev-requirements.txt  pyproject.toml  requirements.txt  stats.py  supervisor.conf
.githooks/: pre-commit
.github/: FUNDING.yml
public/: index.html
