[project]
name = "ch2rss"
version = "0.1.0"
description = "Create RSS feed from a Telegram channel"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "Flask[async]>=3.1.2",
    "asgiref>=3.11.0",
    "Flask-Caching>=2.3.1",
    "pylibmc>=1.6.3",
    "uvicorn[standard]>=0.38.0",
    "rfeed>=1.1.1",
    "cssutils>=2.11.1",
    "httpx>=0.28.1",
    "redis>=7.1.0",
    "pygtail>=0.14.0",
    "ConfigArgParse>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/haron/ch2rss"
